@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.122 2005/05/13 14:10:57 h_oudejans Exp $
+$Id: ChangeLog,v 1.123 2005/05/14 11:17:11 h_oudejans Exp $
+
+2005-05-29 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Fixed hang in catapult and/or openMSX when selecting a disk from 
+	   the history.
+	* Fixed a problem with selecting a disk for drive B from the history
 
 2005-05-14 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fixed rensha turbo update problem
